# chess_variant_engine

./: .gitignore  Ghi chú.txt  implementation_plan phase T8.md  implementation_plan.md  implementation_plan_GUI.md  implementation_plan_GUI_andorid.md  phase_3_implementation_plan.md  walkthrough_1.md  walkthrough_2.md  walkthrough_4.md  walkthrough_5.md  walkthrough_T1.md  walkthrough_T5.md  walkthrough_T6.md  walkthrough_T6_5.md  walkthrough_T7.md  walkthrough_T7_5.md  walkthrough_T8_2_5.md  walkthrough_T8_4_6.md
Walkthrough/: implementation_plan phase T8.md  implementation_plan phase training_1.md  walkthrough_T4.md  walkthrough_T8_1.md  walkthrough_T8_3_x.md  walkthrough_test_1.md  walkthrough_test_2.md
Walkthrough GUI/: M0_flutter_setup_va_khung_app.md  M1_engine_legalmoves_result_fen.md  M2_uci_process_engine.md  M3_ve_ban_co_tu_fen.md  M4_nhap_nuoc_cham_cham.md  M5_keo_tha.md
custom_engine/: HUONG_DAN.md  create_zero_elo_net.py  meson.build  meson_options.txt
custom_engine/cross/: aarch64-linux-android.txt
custom_engine/python/: .gitignore  archive.py  audit_generation.py  dataset.py  loop.py  make_seed.py  model.py  requirements.txt  test_bits.py  test_extreme.py  test_perspective.py  test_roundtrip.py  train.py  trainingdata_reader.py
custom_engine/scripts/: colab_loop.sh  colab_prebuilt.sh  colab_setup.sh  package.ps1  play.bat
custom_engine/src/: main.cc
custom_engine/src/app/: arena_mode.cc  arena_mode.h  backend_factory.cc  backend_factory.h  cli.cc  cli.h  fairyzero_ffi.h  play_mode.cc  play_mode.h  search_opts.cc  search_opts.h  search_support.h  selfplay_mode.cc  selfplay_mode.h  uci_coords.cc  uci_coords.h  uci_nn_engine.cc  uci_nn_engine.h  variant_setup.cc  variant_setup.h
custom_engine/src/chess/: evaluate.cpp  movegen.cpp  position.cpp  position.h  types.h  variants.ini
custom_engine/src/chess/nnue/: evaluate_nnue.cpp
custom_engine/src/chess/nnue/features/: half_ka_v2.cpp  half_ka_v2_variants.cpp
custom_engine/src/lczero_chess/chess/: board.cc  board.h  callbacks.h  encoder.cc  encoder.h  gamestate.h  optimization_proposals.md  position.cc  position.h  types.h
custom_engine/src/lczero_chess/neural/: backend.h  batching_backend.cc  batching_backend.h  encoder.h  network.h  onnx_backend.cc  onnx_backend.h  shared_params.h  zero_heap_cache.cc  zero_heap_cache.h
custom_engine/src/lczero_chess/proto/: net.pb.h
custom_engine/src/lczero_chess/selfplay/: selfplay_driver.cc  selfplay_driver.h  selfplay_game.cc  selfplay_game.h  training_extract.cc  training_extract.h
custom_engine/src/lczero_chess/syzygy/: syzygy.h
custom_engine/src/lczero_chess/trainingdata/: trainingdata_v1.h  writer.cc  writer.h
custom_engine/src/lczero_chess/utils/: cppattributes.h  exception.h  logging.h  mutex.h  optionsdict.h  optionsparser.h  random.h  trace.h
custom_engine/src/search/classic/: node.cc  node.h  search.cc  search.h
custom_engine/src/search/classic/stoppers/: timemgr.cc  timemgr.h
custom_engine/src/tests/: engine_tests.cc  engine_tests.h
custom_engine/tools/: fz_test.cc
gui/: HUONG_DAN_GUI.md  README.md  pubspec.yaml
gui/android/app/: build.gradle.kts
gui/android/app/src/main/: AndroidManifest.xml
gui/android/app/src/main/kotlin/com/example/fairyzero_gui/: MainActivity.kt
gui/lib/: main.dart
gui/lib/config/: launch_config.dart
gui/lib/domain/: board_state.dart  game_controller.dart  uci_move.dart
gui/lib/engine/: engine_service.dart  native_ffi_engine.dart  stub_engine.dart  uci_process_engine.dart
gui/lib/ui/: board_painter.dart  board_view.dart  piece_assets.dart
gui/test/: board_golden_test.dart  widget_test.dart
gui/tool/: flatten_svgs.dart  m2_smoke.dart
gui/windows/: CMakeLists.txt
gui/windows/runner/: Runner.rc  main.cpp  win32_window.cpp
